// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Link/Normal Default - left aligned 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #2f313a;
}

.c0 > i.margin-left {
  margin-left: 8px;
}

.c0 > i.margin-right {
  margin-right: 8px;
}

.c0 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: #2980b9;
}

<div
  className="c0"
  disabled={false}
  size={16}
  type="#2f313a"
>
  <a
    href="#"
  >
    Awesome Link
  </a>
</div>
`;

exports[`Storyshots Link/Normal disabled 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: default;
  color: rgba(0,0,0,0.32);
}

.c0 > i.margin-left {
  margin-left: 8px;
}

.c0 > i.margin-right {
  margin-right: 8px;
}

.c0 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: rgba(0,0,0,0.32);
}

<div
  className="c0"
  disabled={true}
  size={16}
  type="#2f313a"
>
  <span
    href="#"
  >
    Awesome Link
  </span>
</div>
`;

exports[`Storyshots Link/Normal external 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #2f313a;
}

.c0 > i.margin-left {
  margin-left: 8px;
}

.c0 > i.margin-right {
  margin-right: 8px;
}

.c0 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: #2980b9;
}

<div
  className="c0"
  disabled={false}
  size={16}
  type="#2f313a"
>
  <a
    href="#"
  >
    Awesome Link
  </a>
  <i
    className="wg-external-link margin-left"
  />
</div>
`;

exports[`Storyshots Link/Normal right aligned 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #2f313a;
}

.c0 > i.margin-left {
  margin-left: 8px;
}

.c0 > i.margin-right {
  margin-right: 8px;
}

.c0 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: #2980b9;
}

<div
  style={
    Object {
      "textAlign": "right",
      "width": "500px",
    }
  }
>
  <div
    className="c0"
    disabled={false}
    size={16}
    type="#2f313a"
  >
    <a
      href="#"
    >
      Awesome Link
    </a>
  </div>
</div>
`;

exports[`Storyshots Link/Normal with left icon 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #2f313a;
}

.c0 > i.margin-left {
  margin-left: 8px;
}

.c0 > i.margin-right {
  margin-right: 8px;
}

.c0 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: #2980b9;
}

<div
  className="c0"
  disabled={false}
  size={16}
  type="#2f313a"
>
  <i
    className="wg-place margin-right }"
  />
  <a
    href="#"
  >
    Awesome Link
  </a>
</div>
`;

exports[`Storyshots Link/Normal with right icon 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #2f313a;
}

.c0 > i.margin-left {
  margin-left: 8px;
}

.c0 > i.margin-right {
  margin-right: 8px;
}

.c0 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: #2980b9;
}

<div
  className="c0"
  disabled={false}
  size={16}
  type="#2f313a"
>
  <a
    href="#"
  >
    Awesome Link
  </a>
  <i
    className="wg-place margin-left }"
  />
</div>
`;
